# Amoroso

./: .gitignore  AGENTS.md  Makefile  README.en.md  README.md
.github/deepwiki/: GENERATION.md  INDEX.md  testing.md
.github/library-practice-entry-redesign/: idea.md  plan-p1.md  plan-p2.md  plan-p3.md  todo.toml
.github/professional-piano-performance/: idea.md  plan-index.md  plan-p1.md  plan-p10.md  plan-p11.md  plan-p12.md  plan-p13.md  plan-p14.md  plan-p15.md  plan-p2.md  plan-p3.md  plan-p4.md  plan-p5.md  plan-p6.md  plan-p7.md  plan-p8.md  plan-p9.md  requirements-traceability.md  reviewed-scope.md  todo.toml
.github/workflows/: swift-ci.yml
HappyPianist.xcodeproj/: project.pbxproj
HappyPianistAVP/: AGENTS.md  PrivacyInfo.xcprivacy  README.md
HappyPianistAVP/Resources/: Info.plist
HappyPianistAVP/Services/: PianoModeServices.swift  PracticeStepBuilder.swift
LonelyPianist/: ContentView.swift  LonelyPianistApp.swift
LonelyPianist.xcodeproj/: project.pbxproj
LonelyPianistAVP/: AGENTS.md  LonelyPianistAVPApp.swift
LonelyPianistAVPTests/: MIDICanonicalProtocolSelectionTests.swift  PracticeAudioRecognitionCoordinatorTests.swift  PracticeSessionMIDIOnlyModeTests.swift  WindowCoordinatorTests.swift
docs/: GENERATION.md  architecture.md  configuration.md  data-flow.md  dependencies.md  glossary.md  overview.md  piano-performance-quality.md  storage.md  testing.md
piano_duet_server/: README.md
python_backend/: README.md
python_backend/aria_server/: pyproject.toml
python_backend/aria_server/aria_server/: server.py
(+474 files in other folders)
